// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField component renders a field in error state 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-epZMHO {
    color: var(--colors-secondary300);
    display: block;
    font-family: var(--fonts-sans);
    font-weight: 500;
    margin: 0;
  }

  .c-eNcmZt {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal900);
    cursor: text;
    display: block;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-md);
    height: var(--sizes-4);
    width: 100%;
    padding: var(--space-3);
    transition: all 100ms ease-out;
  }

  .c-eNcmZt:focus {
    border-color: var(--colors-primary900);
    box-shadow: inset 0 0 0 1px var(--colors-primary900);
    outline: none;
  }

  .c-eNcmZt[disabled] {
    background-color: var(--colors-tonal300);
    color: var(--colors-tonal700);
    cursor: not-allowed;
  }

  .c-dqbvHS {
    color: var(--colors-tonal900);
    font-family: var(--fonts-sans);
    font-weight: 400;
    margin: 0;
  }
}

@media  {
  .c-epZMHO-ehWmjE-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.625;
  }

  .c-epZMHO-ehWmjE-size-md::before {
    content: '';
    margin-bottom: -0.4489em;
    display: table;
  }

  .c-epZMHO-ehWmjE-size-md::after {
    content: '';
    margin-top: -0.4489em;
    display: table;
  }

  .c-eNcmZt-bXVTjQ-state-error {
    border: 1px solid var(--colors-danger);
  }

  .c-dqbvHS-jZyHXx-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.69;
  }

  .c-dqbvHS-jZyHXx-size-sm::before {
    content: '';
    margin-bottom: -0.477em;
    display: table;
  }

  .c-dqbvHS-jZyHXx-size-sm::after {
    content: '';
    margin-top: -0.477em;
    display: table;
  }
}

@media  {
  .c-PJLV-ikLAKdM-css {
    margin: auto;
    height: 100px;
    width: 100px;
  }

  .c-dhzjXW-iffOmLG-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-2);
  }

  .c-dqbvHS-iisTNcj-css {
    color: var(--colors-danger);
    margin-top: var(--space-1);
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iffOmLG-css"
      >
        <label
          class="c-epZMHO c-epZMHO-ehWmjE-size-md"
          for="INPUT FIELD"
        >
          INPUT FIELD
        </label>
      </div>
      <input
        class="c-eNcmZt c-eNcmZt-bXVTjQ-state-error"
        id="INPUT FIELD"
        name="INPUT FIELD"
        type="text"
      />
      <p
        class="c-dqbvHS c-dqbvHS-jZyHXx-size-sm c-dqbvHS-iisTNcj-css"
      >
        This field is required
      </p>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`InputField component renders a field with a number input 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-epZMHO {
    color: var(--colors-secondary300);
    display: block;
    font-family: var(--fonts-sans);
    font-weight: 500;
    margin: 0;
  }

  .c-eNcmZt {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal900);
    cursor: text;
    display: block;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-md);
    height: var(--sizes-4);
    width: 100%;
    padding: var(--space-3);
    transition: all 100ms ease-out;
  }

  .c-eNcmZt:focus {
    border-color: var(--colors-primary900);
    box-shadow: inset 0 0 0 1px var(--colors-primary900);
    outline: none;
  }

  .c-eNcmZt[disabled] {
    background-color: var(--colors-tonal300);
    color: var(--colors-tonal700);
    cursor: not-allowed;
  }
}

@media  {
  .c-epZMHO-ehWmjE-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.625;
  }

  .c-epZMHO-ehWmjE-size-md::before {
    content: '';
    margin-bottom: -0.4489em;
    display: table;
  }

  .c-epZMHO-ehWmjE-size-md::after {
    content: '';
    margin-top: -0.4489em;
    display: table;
  }
}

@media  {
  .c-PJLV-ikLAKdM-css {
    margin: auto;
    height: 100px;
    width: 100px;
  }

  .c-dhzjXW-iffOmLG-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-2);
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV c-PJLV-ikLAKdM-css"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iffOmLG-css"
      >
        <label
          class="c-epZMHO c-epZMHO-ehWmjE-size-md"
          for="INPUT FIELD"
        >
          INPUT FIELD
        </label>
      </div>
      <input
        class="c-eNcmZt"
        id="INPUT FIELD"
        inputmode="numeric"
        name="INPUT FIELD"
        pattern="[0-9]*"
        placeholder="001"
        type="text"
      />
    </div>
  </form>
</div>
`;

exports[`InputField component renders a field with a text input 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-epZMHO {
    color: var(--colors-secondary300);
    display: block;
    font-family: var(--fonts-sans);
    font-weight: 500;
    margin: 0;
  }

  .c-eNcmZt {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal500);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal900);
    cursor: text;
    display: block;
    font-family: var(--fonts-sans);
    font-size: var(--fontSizes-md);
    height: var(--sizes-4);
    width: 100%;
    padding: var(--space-3);
    transition: all 100ms ease-out;
  }

  .c-eNcmZt:focus {
    border-color: var(--colors-primary900);
    box-shadow: inset 0 0 0 1px var(--colors-primary900);
    outline: none;
  }

  .c-eNcmZt[disabled] {
    background-color: var(--colors-tonal300);
    color: var(--colors-tonal700);
    cursor: not-allowed;
  }
}

@media  {
  .c-epZMHO-ehWmjE-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.625;
  }

  .c-epZMHO-ehWmjE-size-md::before {
    content: '';
    margin-bottom: -0.4489em;
    display: table;
  }

  .c-epZMHO-ehWmjE-size-md::after {
    content: '';
    margin-top: -0.4489em;
    display: table;
  }
}

@media  {
  .c-PJLV-ikLAKdM-css {
    margin: auto;
    height: 100px;
    width: 100px;
  }

  .c-dhzjXW-iffOmLG-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-2);
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV c-PJLV-ikLAKdM-css"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iffOmLG-css"
      >
        <label
          class="c-epZMHO c-epZMHO-ehWmjE-size-md"
          for="INPUT FIELD"
        >
          INPUT FIELD
        </label>
      </div>
      <input
        class="c-eNcmZt"
        id="INPUT FIELD"
        name="INPUT FIELD"
        placeholder="INPUT FIELD"
        type="text"
      />
    </div>
  </form>
</div>
`;
